--- a/core/http/views/partials/navbar.html
+++ b/core/http/views/partials/navbar.html
@@ -42,7 +42,7 @@
                 </div>
                 <div id="dropdownAccount" class="z-10 hidden bg-gray-800 shadow-lg rounded-lg">
                     <div class="p-3 flex flex-col gap-3">
-                        <a href="/" class="block text-sm text-gray-400 hover:text-white rounded"><i class="text-base fa-solid fa-home pr-1"></i> Home </a>
+                        <a href="settings" class="block text-sm text-gray-400 hover:text-white rounded"><i class="text-base fa-solid fa-gear pr-1"></i> Settings </a>
                         <a href="logout" class="block text-sm text-gray-400 hover:text-white rounded"><i class="text-base fa-solid fa-right-from-bracket pr-1"></i> Logout </a>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
         <div class="hidden lg:hidden" id="mobile-menu">
             <div class="flex flex-col pt-4 pb-3">
                 <div class="px-3 py-2 text-gray-400 hover:text-white">
-                    <a href="/">
+                    <a href="/settings#payment">
                         <p class="text-xl"><i class="text-base fa-solid fa-user pr-2"></i>{{.Username}}</p>
                         <p id="mobile-usage-text" class="text-sm">{{if lt (int .Usage.Limit) 0}}Unlimited tokens{{else}}{{.Balance}} tokens{{end}}</p>
                     </a>
@@ -78,6 +78,7 @@
                 <a href="tts/" class="block text-gray-400 hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-music pr-2"></i> TTS </a>
                 <a href="talk/" class="block text-gray-400 hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-phone pr-2"></i> Talk </a>
                 <hr class="my-2 h-px border-t-0 bg-transparent bg-gradient-to-r from-transparent via-neutral-500 to-transparent opacity-25 dark:via-neutral-400" />
+                <a href="settings" class="block text-gray-400 hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-gear pr-2"></i> Settings </a>
                 <a href="logout" class="block text-gray-400 hover:text-white px-3 py-2 rounded mt-1"><i class="fa-solid fa-right-from-bracket pr-2"></i> Logout </a>
             </div>
         </div>
